ipfs/ipfs-add-prefix-middleware.yaml
# Prefixing with /foo
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-ipfs
spec:
  addPrefix:
    prefix: /ipfs
