ipfs/01-ipfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipfs

spec:
  ports:
    - protocol: TCP
      name: ipfs-swarm
      port: 4001
    - protocol: UDP
      name: ipfs-swarm-udp
      port: 4002
    - protocol: TCP
      name: ipfs-api
      port: 5001
    - protocol: TCP
      name: ipfs-http
      port: 8080
    - protocol: TCP
      name: ipfs-ws
      port: 8081
  selector:
    app: ipfs
